--- a/index.html
+++ b/index.html
@@ -556,5 +556,72 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop">
+      <div class="modal">
+        <button type="button" class="modal-close-btn">
+          <svg width="8" height="8" class="close-svg">
+            <use href="./images/icons.svg#icon-close-black"></use>
+          </svg>
+        </button>
+        <p class="modal-header">
+          Leave your contacts and we will call you back
+        </p>
+        <form class="modal-form">
+          <div class="modal-field">
+            <label for="user-name" class="modal-label">Name</label>
+            <div class="modal-icon-wrap">
+              <input
+                type="text"
+                class="modal-input"
+                name="user-name"
+                id="user-name"
+              />
+              <svg class="modal-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-person-black"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-field">
+            <div class="modal-field">
+              <label for="user-tel" class="modal-label">Phone</label>
+              <div class="modal-icon-wrap">
+                <input
+                  type="tel"
+                  class="modal-input"
+                  name="user-tel"
+                  id="user-tel"
+                />
+                <svg class="modal-icon" width="18" height="18">
+                  <use href="./images/icons.svg#icon-phone-black"></use>
+                </svg>
+              </div>
+            </div>
+          </div>
+          <div class="modal-field">
+            <label for="user-mail" class="modal-label">Email</label>
+            <div class="modal-icon-wrap">
+              <input
+                type="mailto"
+                class="modal-input"
+                name="user-mail"
+                id="user-mail"
+              />
+              <svg class="modal-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-email-black"></use>
+              </svg>
+            </div>
+          </div>
+          <label for="user-comment" class="modal-label">Comment</label>
+          <textarea
+            name="user-comment"
+            id="user-comment"
+            class="modal-text"
+            placeholder="Text input"
+          ></textarea>
+          <!-- <p>I accept the terms and conditions of the Privacy Policy</p> -->
+          <button type="submit" class="modal-submit-btn">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
