update css html

--- a/index.html
+++ b/index.html
@@ -557,16 +557,18 @@
         <div class="subscribe">
           <p class="block-title">Subscribe</p>
           <form class="footer-form">
-            <input
-              type="email"
-              name="email"
-              id="user-email"
-              placeholder="E-mail"
-              class="subscribe-input"
-            />
+            <label for="user-mail">
+              <input
+                type="email"
+                name="email"
+                id="user-email"
+                placeholder="E-mail"
+                class="subscribe-input"
+              />
+            </label>
             <button type="submit" class="subscribe-btn">
               Subscribe
-              <svg width="24" height="20" class="footer-btn-icon">
+              <svg width="24" height="24" class="footer-btn-icon">
                 <use href="./images/icons.svg#subscribe-icon"></use>
               </svg>
             </button>
@@ -619,7 +621,7 @@
             <label for="user-mail" class="modal-label">Email</label>
             <div class="modal-icon-wrap">
               <input
-                type="mailto"
+                type="email"
                 class="modal-input"
                 name="user-mail"
                 id="user-mail"
