--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
         <div class="subscribe">
           <p class="block-title">Subscribe</p>
           <form class="footer-form">
-            <label for="user-mail">
+            <label for="user-email" class="footer-label">
               <input
                 type="email"
                 name="email"
@@ -576,7 +576,7 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop">
+    <div class="backdrop is-open">
       <div class="modal">
         <button type="button" class="modal-close-btn">
           <svg width="8" height="8" class="close-svg">
@@ -596,25 +596,23 @@
                 name="user-name"
                 id="user-name"
               />
-              <svg class="modal-icon" width="18" height="18">
+              <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person-black"></use>
               </svg>
             </div>
           </div>
           <div class="modal-field">
-            <div class="modal-field">
-              <label for="user-tel" class="modal-label">Phone</label>
-              <div class="modal-icon-wrap">
-                <input
-                  type="tel"
-                  class="modal-input"
-                  name="user-tel"
-                  id="user-tel"
-                />
-                <svg class="modal-icon" width="18" height="18">
-                  <use href="./images/icons.svg#icon-phone-black"></use>
-                </svg>
-              </div>
+            <label for="user-tel" class="modal-label">Phone</label>
+            <div class="modal-icon-wrap">
+              <input
+                type="tel"
+                class="modal-input"
+                name="user-tel"
+                id="user-tel"
+              />
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone-black"></use>
+              </svg>
             </div>
           </div>
           <div class="modal-field">
@@ -626,7 +624,7 @@
                 name="user-mail"
                 id="user-mail"
               />
-              <svg class="modal-icon" width="18" height="18">
+              <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email-black"></use>
               </svg>
             </div>
@@ -643,18 +641,18 @@
           <div class="modal-field policy">
             <input
               type="checkbox"
-              name="policy"
-              id="policy"
+              name="user-privacy"
+              id="user-privacy"
               class="check-input visually-hidden"
               value="true"
             />
-            <label for="policy" class="check-text">
-              <span>
+            <label for="user-privacy" class="check-text">
+              <span class="privacy-checkbox">
                 <svg width="10" height="8">
                   <use href="./images/icons.svg#check"></use>
                 </svg> </span
               >I accept the terms and conditions of the
-              <a href="">Privacy Policy</a></label
+              <a href="#" class="privacy-link">Privacy Policy</a></label
             >
           </div>
           <button type="submit" class="modal-submit-btn">Send</button>
