--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop">
+    <div class="backdrop is-open">
       <div class="modal">
         <button type="button" class="modal-close-btn">
           <svg width="8" height="8" class="close-svg">
@@ -647,7 +647,7 @@
               value="true"
             />
             <label for="user-privacy" class="check-text">
-              <span class="privacy-checkbox">
+              <span class="policy-checkbox">
                 <svg width="10" height="8">
                   <use href="./images/icons.svg#check"></use>
                 </svg> </span
