--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@
               value="true"
             />
             <label for="user-privacy" class="check-text">
-              <span class="policy-checkbox display">
+              <span class="policy-checkbox">
                 <svg width="10" height="8">
                   <use href="./images/icons.svg#check"></use>
                 </svg> </span
