--- a/index.html
+++ b/index.html
@@ -650,7 +650,8 @@
               <span class="policy-checkbox">
                 <svg width="10" height="8">
                   <use href="./images/icons.svg#check"></use>
-                </svg> </span
+                </svg>
+              </span>
               >I accept the terms and conditions of the
               <a href="#" class="privacy-link">Privacy Policy</a></label
             >
