--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
                   <use href="./images/icons.svg#check"></use>
                 </svg>
               </span>
-              >I accept the terms and conditions of the
+              I accept the terms and conditions of the
               <a href="#" class="privacy-link">Privacy Policy</a></label
             >
           </div>
